# caseWattio

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py
src/adapters/driven/database/: connection.py  create_tables.py  models.py
src/adapters/driven/repositories/: movie_repository_impl.py
src/adapters/driver/api/: routes.py  schemas.py
src/core/models/: movie.py
src/core/ports/: movie_interface.py
src/core/use_cases/movie/: add_movie.py  delete_movie_by_title.py  get_movie_by_id.py  get_movie_by_title.py  list_movie.py  update_movie.py
