[project]
name = "casewattio"
version = "0.1.0"
description = ""
authors = [
    {name = "limagustavo2200",email = "limagustavo2200@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13,<0.116.0",
    "ignr>=2.2,<3.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

